--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ anyio==3.7.1
 asyncpg==0.28.0
 click==8.1.7
 fastapi==0.101.1
+gunicorn==21.2.0
 h11==0.14.0
 idna==3.4
+packaging==23.1
 psycopg2-binary==2.9.7
 pydantic==1.10.12
 sniffio==1.3.0
